<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/translate_setting">

        <ListPreference
            app:key="engine"
            app:defaultValue="google"
            app:entries="@array/engine"
            app:entryValues="@array/engine_values"
            app:title="@string/translate_engine"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/exterior">

    <ListPreference
        app:key="theme"
        app:defaultValue="blue"
        app:entries="@array/theme"
        app:entryValues="@array/theme_values"
        app:summary="@string/theme_tips"
        app:title="@string/change_theme"
        app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <EditTextPreference
            app:key="command"
            app:title="@string/command"
            app:summary="@string/command_tips"/>

    </PreferenceCategory>

</PreferenceScreen>